# python-fun

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install.sh
.devcontainer/sql/: init.sh  init.sql  seed.sql
app/: main.py  test_main.py
